.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:26:00 **** Incremental Build of configuration Debug for project cpu ****
make all 
Building file: ../src/cpu_main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/cpu_main.d" -MT"src/cpu_main.o" -o "src/cpu_main.o" "../src/cpu_main.c"
In file included from ../src/cpu_main.c:1:0:
../src/cpu_main.h:20:5: error: redeclaration of enumerator ‘PROGRAMA’
     PROGRAMA,
     ^
In file included from ../src/../../shared/src/protocol.c:1:0,
                 from ../src/cpu_main.h:14,
                 from ../src/cpu_main.c:1:
../src/../../shared/src/protocol.h:18:5: note: previous definition of ‘PROGRAMA’ was here
     PROGRAMA,
     ^
In file included from ../src/cpu_main.c:1:0:
../src/cpu_main.h:21:2: error: redeclaration of enumerator ‘PROCESO’
  PROCESO,
  ^
In file included from ../src/../../shared/src/protocol.c:1:0,
                 from ../src/cpu_main.h:14,
                 from ../src/cpu_main.c:1:
../src/../../shared/src/protocol.h:19:2: note: previous definition of ‘PROCESO’ was here
  PROCESO,
  ^
In file included from ../src/cpu_main.c:1:0:
../src/cpu_main.h:22:2: error: redeclaration of enumerator ‘INTERRUPTION’
  INTERRUPTION,
  ^
In file included from ../src/../../shared/src/protocol.c:1:0,
                 from ../src/cpu_main.h:14,
                 from ../src/cpu_main.c:1:
../src/../../shared/src/protocol.h:20:2: note: previous definition of ‘INTERRUPTION’ was here
src/subdir.mk:18: recipe for target 'src/cpu_main.o' failed
  INTERRUPTION,
  ^
In file included from ../src/cpu_main.c:1:0:
../src/cpu_main.h:23:2: error: redeclaration of enumerator ‘EXIT’
  EXIT,
  ^
In file included from ../src/../../shared/src/protocol.c:1:0,
                 from ../src/cpu_main.h:14,
                 from ../src/cpu_main.c:1:
../src/../../shared/src/protocol.h:21:2: note: previous definition of ‘EXIT’ was here
  EXIT,
  ^
In file included from ../src/cpu_main.c:1:0:
../src/cpu_main.h:24:2: error: redeclaration of enumerator ‘CONTINUE’
  CONTINUE,
  ^
In file included from ../src/../../shared/src/protocol.c:1:0,
                 from ../src/cpu_main.h:14,
                 from ../src/cpu_main.c:1:
../src/../../shared/src/protocol.h:22:2: note: previous definition of ‘CONTINUE’ was here
  CONTINUE,
  ^
In file included from ../src/cpu_main.c:1:0:
../src/cpu_main.h:25:2: error: redeclaration of enumerator ‘BLOCKED’
  BLOCKED
  ^
In file included from ../src/../../shared/src/protocol.c:1:0,
                 from ../src/cpu_main.h:14,
                 from ../src/cpu_main.c:1:
../src/../../shared/src/protocol.h:23:2: note: previous definition of ‘BLOCKED’ was here
  BLOCKED
  ^
In file included from ../src/cpu_main.c:1:0:
../src/cpu_main.h:26:3: error: conflicting types for ‘op_code’
 } op_code;
   ^
In file included from ../src/../../shared/src/protocol.c:1:0,
                 from ../src/cpu_main.h:14,
                 from ../src/cpu_main.c:1:
../src/../../shared/src/protocol.h:24:3: note: previous declaration of ‘op_code’ was here
 } op_code;
   ^
make: *** [src/cpu_main.o] Error 1
